<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="corp.watermelon.kalanchawatermelon.Edit_Activity"
  >
     <android.support.v7.widget.CardView
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="horizontal"
          android:layout_width="match_parent"
          xmlns:card_view="http://schemas.android.com/apk/res-auto"
          android:layout_margin="5dp"
          card_view:cardCornerRadius="10dp"
          card_view:cardElevation="5dp"
          android:layout_height="match_parent">
          <LinearLayout
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">
              <ImageView
                  android:id="@+id/image"
                  android:layout_width="150dp"
                  android:layout_height="150dp"
                  android:paddingLeft="15dp"
                  android:scaleType="fitCenter"
                  android:src="@drawable/watermelon1"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"
                  android:layout_below="@+id/playerImage" />
              <TextView
                  android:id="@+id/profile"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:textColor="@color/colorAccent"
                  android:text="@string/fruit_info"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:layout_below="@+id/image"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true" />
              <EditText
                  android:id="@+id/nameEditTxt"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentLeft="true"
                  android:paddingLeft="15dp"
                  android:hint="@string/nameedit"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:layout_below="@+id/profile" />
              <EditText
                  android:id="@+id/posEditTxt"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentLeft="true"
                  android:layout_below="@+id/nameTxt"
                  android:paddingLeft="15dp"
                  android:layout_marginTop="24dp"
                  android:hint="@string/position"
                  android:textAppearance="?android:attr/textAppearanceLarge" />
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="52dp"
                  android:gravity="center_vertical|end"
                  android:orientation="horizontal"
                  android:id="@+id/linear1"
                  android:padding="8dp"
                  android:layout_alignParentBottom="true"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true">
                  <Button
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:height="48dp"
                      android:clickable="true"
                      android:padding="5dp"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:gravity="center_vertical|center_horizontal"
                      android:text="@string/update"
                      android:textColor="@color/colorPrimary"
                      android:id="@+id/updateBtn" />
                  <Button
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:height="48dp"
                      android:clickable="true"
                      android:padding="5dp"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:gravity="center_vertical|center_horizontal"
                      android:text="@string/delete"
                      android:textColor="@color/colorPrimary"
                      android:id="@+id/deleteBtn" />
              </LinearLayout>

          </LinearLayout>
      </android.support.v7.widget.CardView>
  </RelativeLayout>
